interpreter-janeklang/tests/bad/06_noReturnInNotVoid_3.janek
int skibidi(){
    "hi :D";
}

int main(){
    skibidi();
}